# omnimon

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: BpfTarget.cmake  BtfGen.cmake
src/: CMakeLists.txt
src/backend/: CMakeLists.txt
src/backend/bpf/: BpfManager.cpp  BpfManager.hpp  BpfMap.hpp  CMakeLists.txt
src/backend/metrics/: Arithmetic.cpp  Arithmetic.hpp  Binding.cpp  Binding.hpp  CMakeLists.txt  Counter.cpp  Counter.hpp  DateType.hpp  Gauge.hpp
src/backend/process/: CMakeLists.txt  Process.cpp  Process.hpp  ProcessListing.cpp  ProcessListing.hpp  Types.hpp
src/backend/process/file/: CMakeLists.txt  FileIo.bpf.c  FileIo.bpf.h  FileIo.cpp  FileIo.hpp
src/backend/system/: CMakeLists.txt  SysInfo.cpp  SysInfo.hpp
src/frontend/: CMakeLists.txt
src/frontend/curses/: CMakeLists.txt  Events.cpp  Events.hpp  OmniMon.cpp  OmniMon.hpp  Options.cpp  Options.hpp  Process.cpp  Process.hpp  ProcessOrder.cpp  ProcessOrder.hpp  ProcessTree.cpp  ProcessTree.hpp  Screen.cpp  Screen.hpp  main.cpp
src/frontend/curses/layouts/: AttrView.cpp  AttrView.hpp  CMakeLists.txt  Container.cpp  Container.hpp  Curses.cpp  Curses.hpp  PlaceHolder.hpp  Table.cpp  Table.hpp  TextView.cpp  TextView.hpp  View.cpp  View.hpp  Wrapper.cpp  Wrapper.hpp
src/utils/: CMakeLists.txt  Clock.cpp  Clock.hpp  Error.cpp  Error.hpp  Formatter.cpp  Formatter.hpp  StringUtils.cpp  StringUtils.hpp
